# occupancy-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Project_Info.md  README.md  alembic.ini  pyproject.toml
.claude/: statusline.sh
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema_with_sensor_readings_room_transitions_and_predictions.py  002_add_postgresql_optimizations_and_constraints.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: database.md
scripts/: manage_db.py  setup_dev_db.py
src/occupancy/: __init__.py
src/occupancy/config/: __init__.py  rooms.yaml  settings.py
src/occupancy/domain/: __init__.py  events.py  exceptions.py  models.py  types.py
src/occupancy/infrastructure/: __init__.py
src/occupancy/infrastructure/database/: __init__.py  connection.py  models.py  repositories.py
src/occupancy/infrastructure/database/migrations/: 001_initial.sql
src/occupancy/infrastructure/homeassistant/: __init__.py  client.py  mappers.py
tests/: __init__.py  test_basic.py
tests/fixtures/: sample_data.py
tests/infrastructure/: test_alembic_config.py  test_management_scripts.py  test_migration_files.py  test_migration_infrastructure_complete.py  test_migration_operations.py  test_migrations.py  test_schema_generation.py
tests/integration/: test_database.py  test_ha_client.py  test_repositories.py
tests/unit/: test_config.py  test_domain_models.py  test_mappers.py
