[tool.poetry]
name = "occupancy-predictor"
version = "0.1.0"
description = "ML-based room occupancy prediction for Home Assistant"
authors = ["Your Name"]
readme = "README.md"
packages = [{include = "occupancy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
pandas = "^2.1.0"
numpy = "^1.26.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.2.0"
httpx = "^0.26.0"
websockets = "^12.0"
asyncio-mqtt = "^0.16.0"
prometheus-client = "^0.19.0"
structlog = "^24.1.0"
typer = "^0.9.0"
rich = "^13.7.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
ruff = "^0.1.11"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
types-redis = "^4.6.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "C90", "I", "N", "UP", "S", "B", "A", "C4", "DJ", "EM", "EXE", "ISC", "ICN", "PT", "Q", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PL", "TRY", "NPY", "RUF"]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true